--- a/.env.example
+++ b/.env.example
@@ -8,16 +8,25 @@ LANGFLOW_PORT=7680
 LANGFLOW_WORKERS=2
 
 # ==========================================
+# JWT Authentication (NEW - Production Ready)
+# ==========================================
+# Generate a strong secret key: python -c "import secrets; print(secrets.token_urlsafe(32))"
+SECRET_KEY=your-super-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# ==========================================
 # Authentication (Development Mode)
 # ==========================================
 # For development, auto-login is enabled
 # Change to false for production
-LANGFLOW_AUTO_LOGIN=true
-LANGFLOW_AUTH_SKIP_LOGIN=true
+LANGFLOW_AUTO_LOGIN=false
+LANGFLOW_AUTH_SKIP_LOGIN=false
 
 # Default admin credentials (CHANGE IN PRODUCTION!)
 LANGFLOW_SUPERUSER=admin
-LANGFLOW_SUPERUSER_PASSWORD=admin
+LANGFLOW_SUPERUSER_PASSWORD=admin123
 
 # Secret key for JWT tokens (CHANGE IN PRODUCTION!)
 LANGFLOW_SECRET_KEY=dev-secret-key-change-in-production
@@ -26,29 +35,36 @@ LANGFLOW_SECRET_KEY=dev-secret-key-change-in-production
 # Database Configuration
 # ==========================================
 # SQLite (Development)
-LANGFLOW_DATABASE_URL=sqlite:///./vetrai_data/vetrai.db
+# LANGFLOW_DATABASE_URL=sqlite:///./vetrai_data/vetrai.db
 
-# PostgreSQL (Production - uncomment to use)
-# LANGFLOW_DATABASE_URL=postgresql://vetrai:vetrai@localhost:5432/vetrai
+# PostgreSQL (Production - with JWT auth)
+LANGFLOW_DATABASE_URL=postgresql://vetrai:vetrai@postgres:5432/vetrai
+DB_USER=vetrai
+DB_PASSWORD=vetrai
+DB_NAME=vetrai
+DB_PORT=5432
 
 # ==========================================
 # CORS & Security Settings
 # ==========================================
-# Allow all origins (development only!)
-LANGFLOW_CORS_ORIGINS=*
-LANGFLOW_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+# Restrict origins in production!
+LANGFLOW_CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:80,http://frontend:80
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:80,http://frontend:80
+LANGFLOW_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,postgres,backend,frontend
 
-# Cookie security settings (for localhost HTTP)
+# Cookie security settings
 LANGFLOW_COOKIE_SECURE=false
-LANGFLOW_COOKIE_HTTPONLY=false
-LANGFLOW_COOKIE_SAMESITE=lax
+LANGFLOW_COOKIE_HTTPONLY=true
+LANGFLOW_COOKIE_SAMESITE=strict
 
 # ==========================================
 # Frontend Configuration
 # ==========================================
-VITE_API_BASE_URL=/api
+VITE_API_BASE_URL=http://localhost:7860
 VITE_PUBLIC_PATH=/
 VITE_LOG_LEVEL=info
+NODE_ENV=production
+REACT_APP_API_URL=http://localhost:7860
 
 # ==========================================
 # Python Configuration
@@ -57,10 +73,29 @@ PYTHONDONTWRITEBYTECODE=1
 PYTHONUNBUFFERED=1
 
 # ==========================================
-# Development Options
+# Logging Configuration
 # ==========================================
-# Set to true for verbose logging
 LANGFLOW_LOG_LEVEL=info
+LOG_LEVEL=info
+LANGFLOW_ENVIRONMENT=production
 
-# Enable development mode features
-LANGFLOW_ENVIRONMENT=development
+# ==========================================
+# Docker Compose Services
+# ==========================================
+BACKEND_PORT=7860
+FRONTEND_PORT=3000
+
+# ==========================================
+# Optional: Cloud Storage (S3)
+# ==========================================
+# AWS_ACCESS_KEY_ID=your-access-key
+# AWS_SECRET_ACCESS_KEY=your-secret-key
+# AWS_S3_BUCKET=your-bucket-name
+# AWS_REGION=us-east-1
+
+# ==========================================
+# Optional: External Services
+# ==========================================
+# OPENAI_API_KEY=sk-...
+# LANGCHAIN_API_KEY=...
+# HUGGINGFACE_API_KEY=...
