--- a/docker/frontend/nginx.conf
+++ b/docker/frontend/nginx.conf
@@ -1,30 +1,44 @@
-server {
-    gzip on;
-    gzip_comp_level  2;
-    gzip_min_length  1000;
-    gzip_types  text/xml text/css;
-    gzip_http_version 1.1;
-    gzip_vary  on;
-    gzip_disable "MSIE [4-6] \.";
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    listen __FRONTEND_PORT__;
+    sendfile on;
+    keepalive_timeout 65;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
-        expires 1d;
-        add_header Cache-Control "public";
-    }
-    location /api {
-        proxy_pass __BACKEND_URL__;
-    }
-    location /health_check {
-        proxy_pass __BACKEND_URL__;
-    }
-    location /health {
-        proxy_pass __BACKEND_URL__;
-    }
+    server {
+        gzip on;
+        gzip_comp_level  2;
+        gzip_min_length  1000;
+        gzip_types  text/xml text/css;
+        gzip_http_version 1.1;
+        gzip_vary  on;
+        gzip_disable "MSIE [4-6] \.";
 
-    include /etc/nginx/extra-conf.d/*.conf;
+        listen 80;
+        server_name _;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html =404;
+            expires 1d;
+            add_header Cache-Control "public";
+        }
+        
+        location /api {
+            proxy_pass http://backend:7860;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        location /health_check {
+            proxy_pass http://backend:7860/health_check;
+        }
+        
+        location /health {
+            proxy_pass http://backend:7860/health;
+        }
+    }
 }
