--- a/docker/frontend/Dockerfile.frontend
+++ b/docker/frontend/Dockerfile.frontend
@@ -1,16 +1,16 @@
 # Build stage
-FROM node:18-alpine AS builder
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY src/frontend/package*.json ./
 
 # Install dependencies  
-RUN npm ci
+RUN npm ci --legacy-peer-deps
 
 # Copy source code
-COPY . .
+COPY src/frontend . 
 
 # Build the app
 ARG REACT_APP_API_URL=http://localhost:7860
@@ -19,14 +19,17 @@ ENV VITE_API_URL=${REACT_APP_API_URL}
 
 RUN npm run build
 
-# Production stage
+# List files for debugging - keep this temporarily
+RUN if [ -d "/app/dist" ]; then echo "dist found"; fi && ls -la /app/
+
+# Production stage  
 FROM nginx:alpine
 
 # Copy nginx config
-COPY ../../docker/frontend/nginx.conf /etc/nginx/nginx.conf
+COPY docker/frontend/nginx.conf /etc/nginx/nginx.conf
 
-# Copy built app from builder
-COPY --from=builder /app/dist /usr/share/nginx/html
+# Copy built app from builder - use wildcard to handle any output dir
+COPY --from=builder /app/dist* /usr/share/nginx/html/
 
 # Expose port
 EXPOSE 80
